Demo links to view LESS source

--- a/demo.html
+++ b/demo.html
@@ -40,11 +40,14 @@
 			Demo: span.close-btn-42
 		</div>
 		<div class="fake-lightbox">
-			<span class="close-btn-red-36" title="Close">Close</span>
-			Demo: span.close-btn-red-36
+			<span class="close-btn-red-20" title="Close">Close</span>
+			Demo: span.close-btn-red-20
 		</div>
 		<p>
 			<a href="http://github.com/alanhogan/CSS-Only-Lightbox-Close-Button">This Project on Github</a>
+		</p>
+		<p>
+			<a href="css/close-btn.less">LESS source</a>
 		</p>
 	</article>
 </body>
